--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "PORT=25554 react-scripts start",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.4"
+    "@types/styled-components": "^5.1.4",
+    "@types/uuid": "^8.3.0"
   }
 }
