--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,10 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": "react-app"
+		"extends": "react-app",
+		"rules": {
+			"react-hooks/exhaustive-deps": "off"
+		}
 	},
 	"browserslist": {
 		"production": [
