--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "taskpad",
-	"version": "1.0.8",
+	"version": "1.1.0",
 	"description": "This is a kind of a notepad",
 	"main": "index.js",
 	"scripts": {
 		"start": "concurrently \"cd ./web && BROWSER=none yarn start\" \"wait-on http://localhost:25554 && electron .\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "cd web && yarn build && cd ../ && npx electron-builder --linux deb --dir",
+		"build": "cd web && yarn build && cd ../ && npx electron-builder --linux deb --win",
 		"build:windows": "cd web && yarn && yarn build && cd ../ && yarn && npx electron-builder --win"
 	},
 	"repository": {
