--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-router-dom": "^5.1.6",
+		"date-fns": "^2.16.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
